<resources>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="id_login" translatable="false">id_login</string>

    <string name="app_name">ProjetoFinal</string>
    <string name="email">Insert your email</string>
    <string name="password">Insert your password</string>
    <string name="login">Login</string>
    <string name="humidade">Humidity</string>
    <string name="luminosidade">Brightness</string>
    <string name="temperatura">Temperature</string>
    <string name="hum_igual">Humidity =</string>
    <string name="temp_igual">Temperature =</string>
    <string name="lum_igual">Brightness =</string>
    <string name="Logout">Logout</string>
    <string name="temp_salva">Temperature saved with success</string>
    <string name="hum_salva">Humidity saved with success</string>
    <string name="lum_salva">Luminosity saved with success</string>
    <string name="alerta">ALERT</string>
    <string name="condicoes">Unfavorable weather conditions</string>
    <string name="confirmar">Confirm</string>
    <string name="ler_dados">Alert values</string>
    <string name="sair">Exit</string>
    <string name="valor">Value :</string>
    <string name="horas">Time :</string>
    <string name="email_valid">Insert a valid email</string>
    <string name="email_ver">Please verify your email address</string>
    <string name="login_fail">Login Failed</string>
    <string name="login_independent">Login as sensor</string>
    <string name="login_dependent">Login as caretaker</string>
    <string name="register">Register</string>
    <string name="register_error">Error. Try again later.</string>
</resources>